--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=true
+security.ignored="*.bundle.*"
